WAVE contrast fix.

--- a/src/madrone.scss
+++ b/src/madrone.scss
@@ -249,6 +249,10 @@ blockquote {
   font-size: 1.125rem;
 }
 
+code {
+  background-color: #fff;
+}
+
 .node-preview-container {
   background-color: $bucktoothwhite;
 }
